--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node": "^20.5.1",
     "numeral": "^2.0.6",
     "pinia": "^2.0.13",
+    "rupiah-currency-formatter": "^1.0.0",
     "sweetalert2": "^11.6.13",
     "vue": "^3.0.0",
     "vue-i18n": "^9.2.2",
